# KWCM_PJ

src/: CMakeLists.txt  main.cpp
src/trygonometria/: CmakeLists.txt  trygonometria.cpp  trygonometria.h
